--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 oauthlib==3.1.1
-Pillow==8.2.0
+pillow>=8.3.2
 PySocks==1.7.1
 pytz==2021.1
 requests==2.25.1
